--- a/package.json
+++ b/package.json
@@ -7,15 +7,26 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.2",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@realm/react": "^0.6.0",
+    "@reduxjs/toolkit": "^2.2.5",
     "expo": "^49.0.8",
     "expo-dev-client": "~2.4.8",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-native": "0.72.4",
     "react-native-get-random-values": "~1.9.0",
-    "realm": "12.0.0"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-redux": "^9.1.2",
+    "realm": "12.0.0",
+    "redux": "^5.0.1",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
